[package]

name = "oncemutex"
version = "0.0.3"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-once-mutex.git"
description = "A mutex providing one-time synchronized access, then safe unsynchronized access."
readme = "README.md"
license = "MIT"

[dev-dependencies]
stainless = "*"

