[package]

name = "oncemutex"
version = "0.0.6"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-once-mutex.git"
description = "A mutex providing one-time synchronized access, then safe unsynchronized access."
readme = "README.md"
license = "MIT/Apache-2.0"

